made checkout header interactive

--- a/checkout.html
+++ b/checkout.html
@@ -34,13 +34,9 @@
 					</a>
 				</div>
 
-				<div class="checkout-header-middle-section">
-					Checkout (<a
-						class="return-to-home-link js-checkout-items-header"
-						href="amazon.html"
-						>3 items</a
-					>)
-				</div>
+				<div
+					class="checkout-header-middle-section js-checkout-middle-header"
+				></div>
 
 				<div class="checkout-header-right-section">
 					<img src="images/icons/checkout-lock-icon.png" />
